WIP Hibernate upgrade - updated column annotations for jsonb columns by adding missing columnDefinition property - changed NativeQueries from session.createSQLQuery to session.createNativeQuery including some necessary adaptations