@@ -115,7 +115,7 @@ public class HibernateUtil
 		if (list == null || list.isEmpty()) {
 			return null;
 		}
-		return list.get(0);
+		return list.getFirst();
 	}
 
 	/**
